finish styling for first parallax section

--- a/css/custom.css
+++ b/css/custom.css
@@ -81,11 +81,21 @@ h5 {
 .font-green {
 	color:#A7BB03
 }
+.font-green-2 {
+	color:#EFF9A5;
+}
 .btn-black:hover > .check-hover {
 	color:#333333;
 }
+.dark h2 {
+	color:#EFF9A5;
+}
+#header.sticky-header:not(.static-sticky) #primary-menu > ul > li > a {
+	padding-top:11px;
+}
 .h2-font-less {
 	font-size:35px;
+	color:#EFF9A5;
 }
 
 .gentium-book {
