change top border of meet the team section

--- a/css/custom.css
+++ b/css/custom.css
@@ -490,7 +490,7 @@ q:after {
 }
 #section-testimonials {
 	height:400px;
-	border-bottom:5px solid #5C5B81;
+	border-bottom:5px solid #00B5FF;
 
 }
 
