--- a/css/custom.css
+++ b/css/custom.css
@@ -302,10 +302,11 @@ q:after {
 	width:105%;
 }
 
-.title-purple {
+.title-white {
 	/* LIMITED TIME SUMMER: */
 	font-size: 38px;
-	color: #7270BC;
+	color: #FFF;
+	text-shadow:none;
 	font-weight:400;
 	margin-bottom:0px;
 }
@@ -323,7 +324,7 @@ q:after {
 .section-four-span {
 	/* Offer Ends September: */
 	font-size: 18.5px;
-	color: #7C7C7C;
+	color: #FFF;
 	letter-spacing:.5px;
 }
 .section-four-row {
@@ -362,7 +363,7 @@ q:after {
 }
 
 .row .price-box {
-	color:#5C5B81
+	color:#7ED321;
 }
 .row .price-box-mid {
 	color: #7270BC;
@@ -373,7 +374,7 @@ q:after {
 	border-radius:7px 7px 0 0;
 }
 .price-box-top {
-	background: #5C5B81;;
+	background: #7ED321;
 }
 .price-box-top-mid {
 	background:#7270BC;
@@ -395,8 +396,8 @@ q:after {
 #content p {
 	line-height:1.3;
 }
-.purple-1 {
-	color:#5C5B81;
+.green-1 {
+	color:#7ED321;
 }
 
 .color-purple-3 {
@@ -448,8 +449,7 @@ q:after {
 	font-weight:500;
 }
 #section-work {
-
-	background: #F7F7F7;
+	background: #00B5FF;
 }
 #section-team {
 	background:url('images/reviews-section.jpg')
@@ -458,7 +458,6 @@ q:after {
 	font-size: 38px;
 	color: #FFFFFF;
 	font-weight:400;
-	text-shadow: 2px 2px 5px rgba(0,0,0,0.92);
 }
 .section-six-span {
 	/* Join our Dimensions: */
