finish styling/spacing for no insurance section

--- a/css/custom.css
+++ b/css/custom.css
@@ -491,7 +491,7 @@ q:after {
 	text-shadow:none;
 }
 #section-services {
-	background:#3E3E3E;
+	background:#EFF9A5;
 }
 
 .section-two-border-top {
@@ -541,7 +541,7 @@ q:after {
 }
 .box-right {
 	width:24%;
-	background:#C2D31E;
+	background:#D1E43B;
 	border-radius: 0px 8px 8px 0px;
 }
 div.box-right > div.box-right-top {
