--- a/css/custom.css
+++ b/css/custom.css
@@ -208,7 +208,7 @@ q:after {
 }
 
 .section-8-purple {
-	color:#7270BC;
+	color:#00B5FF;
 	font-family:Roboto Condensed;
 	font-weight:400;
 }
@@ -373,6 +373,9 @@ q:after {
 .contact-address {
 	font-size:12px;
 	color:#7C7C7C;
+}
+.font-light-black {
+	color:#7C7C7C
 }
 
 .row .price-box, .row .price-box-mid {
