finish mobile responsiveness for last section

--- a/css/custom.css
+++ b/css/custom.css
@@ -28,8 +28,17 @@ h2 {
 h3 {
 	font-size:39px;
 }
+.font-17 {
+	font-size:17px;
+}
 .font-20 {
 	font-size:20px;
+}
+.font-25 {
+	font-size:25px;
+}
+.bottommargin-5 {
+	margin-bottom:5px;
 }
 h1,
 h2,
@@ -714,6 +723,22 @@ div.box-right > div.box-right-top {
 .font-orange {
 	color:#FF7A00;
 }
+.contact-box-wrap {
+	position:absolute;
+	right:0px;
+	height:100%;
+	width:33%;
+	margin-right:14%;
+	padding: 5% 4% 5% 4%;
+}
+.contact-box {
+	border-radius:3px;
+	background:#FFF;
+	width:100%;
+	height:100%;
+	padding:20px;
+
+}
 
 .float-left {
 	float:left;
@@ -781,6 +806,15 @@ section {
 #mobile-background {
 	display:none;
 }
+.text-right {
+	text-align:right;
+}
+.text-left {
+	text-align:left;
+}
+.toppadding-10 {
+	padding-top:10px;
+}
 .font-light-black {
 	color:#353C3F;
 }
@@ -806,6 +840,113 @@ section {
   padding: 0 0 0 30px;
   display: none;
 }
+
+/*Slick Slider*/
+
+.tour-slide {
+	min-height: 300px;
+	width: 100%;
+	background-position: center center;
+	background-size: cover;
+	text-align: center;
+}
+
+.team-member {
+	padding: 10px;
+	text-align: center;
+}
+
+.team-name {
+	color: #00B5FF;
+	margin-bottom: 0px;
+}
+
+.team-image {
+	background-color: black;
+}
+
+.team-image img:hover {
+	border: 2px solid #00B5FF;
+	opacity: 0.7;
+}
+
+.slick-slide img {
+	display: block;
+	margin: 0px auto;
+}
+.slick-prev {
+	left: -15px;
+	z-index: 2;
+}
+.slick-next {
+	right: -15px;
+}
+
+.slick-next:before {
+	content: "\f054";
+	font-family: 'FontAwesome';
+	border: 1px solid white;
+	background-color: #00B5FF;
+	border-radius: 100%;
+	display: block;
+	width: 30px;
+	height: 30px;
+	font-size: 20px;
+	line-height: 30px;
+
+}
+#section-location {
+	width: 100%;
+    /* whatever width you want */
+    display: inline-block;
+    position: relative;
+    background-size: contain !important;
+    margin: 0 auto;
+	background-repeat:no-repeat !important;
+	margin-bottom:-8px;
+}
+#section-location:after {
+	padding-top: 39.8%;
+    /* this llama image is 800x600 so set the padding top % to match 600/800 = .75 */
+    display: block;
+    content: '';
+}
+
+
+.address, .patient-hotline-text {
+	color:#7C7C7C;
+	margin-top:10px;
+	font-family: gentium-book basic;
+	text-align:center;
+	font-size:12px;
+	font-weight:300;
+}
+.margin-center {
+	margin:0 auto;
+}
+
+
+
+.slick-dots li button:before {
+	font-size:28px;
+}
+
+.slick-prev:before {
+	content: "\f053";
+	font-family: 'FontAwesome';
+	border: 1px solid white;
+	background-color: #00B5FF;
+	border-radius: 100%;
+	display: block;
+	width: 30px;
+	height: 30px;
+	font-size: 20px;
+	line-height: 30px;
+}
+.content-wrap {
+	padding-bottom:0px;
+}
+
 
 @media only screen and (max-width:1200px) {
 
@@ -947,9 +1088,25 @@ section {
 	}
 
 }
+.mobile-appear {
+	display:none;
+}
 
 
 @media only screen and (max-width:768px) {
+	.contact-box-wrap {
+		width:100%;
+		margin-right:0;
+	}
+	.mobile-35-width {
+		width:35%;
+	}
+	.mobile-gone {
+		display:none;
+	}
+	.mobile-appear {
+		display:block;
+	}
 	#slider {
 		display:none;
 	}
@@ -982,6 +1139,9 @@ section {
 	.price-mobile {
 		margin-bottom:15px;
 	}
+	.slick-dots li button:before {
+		display:none;
+	}
 }
 @media only screen and (max-width:320px) {
 	div.box-left > div.box-left-top > h4 {
@@ -992,6 +1152,9 @@ section {
 	}
 	#section-services {
 		height:550px;
+	}
+	#section-location {
+		background-image:none;
 	}
 	.section-six-container {
 		width:100%;
@@ -1010,124 +1173,30 @@ section {
 	#footer, #copyrights {
 		height: auto;
 	}
-}
+	#section-location:after {
+	}
+	.contact-box-wrap {
+		position:relative;
+		top:80px;
+	}
+	.mobile-appear {
+		display:none;
+	}
+	.mobile-gone {
+		display:block;
+	}
+	#section-location {
+		margin-bottom:-100px;
+		background-image:none !important;
+	}
+	.mobile-35-width {
+		width:90%;
+	}
+	.slick-initialized .slick-slide {
+		margin-bottom:-200px;
+	}
+	#section-tour > div.container {
+		margin-bottom:-85px;
+	}
 
-
-/*Slick Slider*/
-
-.tour-slide {
-	min-height: 300px;
-	width: 100%;
-	background-position: center center;
-	background-size: cover;
-	text-align: center;
-}
-
-.team-member {
-	padding: 10px;
-	text-align: center;
-}
-
-.team-name {
-	color: #00B5FF;
-	margin-bottom: 0px;
-}
-
-.team-image {
-	background-color: black;
-}
-
-.team-image img:hover {
-	border: 2px solid #00B5FF;
-	opacity: 0.7;
-}
-
-.slick-slide img {
-	display: block;
-	margin: 0px auto;
-}
-.slick-prev {
-	left: -15px;
-	z-index: 2;
-}
-.slick-next {
-	right: -15px;
-}
-
-.slick-next:before {
-	content: "\f054";
-	font-family: 'FontAwesome';
-	border: 1px solid white;
-	background-color: #00B5FF;
-	border-radius: 100%;
-	display: block;
-	width: 30px;
-	height: 30px;
-	font-size: 20px;
-	line-height: 30px;
-
-}
-#section-location {
-	width: 100%;
-    /* whatever width you want */
-    display: inline-block;
-    position: relative;
-    background-size: contain !important;
-    margin: 0 auto;
-	background-repeat:no-repeat !important;
-	margin-bottom:-8px;
-}
-#section-location:after {
-	padding-top: 39.8%;
-    /* this llama image is 800x600 so set the padding top % to match 600/800 = .75 */
-    display: block;
-    content: '';
-}
-.contact-box-wrap {
-	position:absolute;
-	right:0px;
-	height:100%;
-	width:33%;
-	margin-right:14%;
-	padding: 5% 4% 5% 4%;
-}
-
-.address, .patient-hotline-text {
-	color:#7C7C7C;
-	margin-top:10px;
-	font-family: gentium-book basic;
-	text-align:center;
-	font-size:12px;
-	font-weight:300;
-}
-.margin-center {
-	margin:0 auto;
-}
-
-.contact-box {
-	border-radius:3px;
-	background:#FFF;
-	width:100%;
-	border:1px solid #000;
-	height:100%;
-	padding:20px;
-
-}
-
-
-
-.slick-prev:before {
-	content: "\f053";
-	font-family: 'FontAwesome';
-	border: 1px solid white;
-	background-color: #00B5FF;
-	border-radius: 100%;
-	display: block;
-	width: 30px;
-	height: 30px;
-	font-size: 20px;
-	line-height: 30px;
-}
-.content-wrap {
-	padding-bottom:0px;
 }
