finish styling for copyrights section of footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -759,7 +759,7 @@ div.box-right > div.box-right-top {
 }
 
 #footer, #copyrights {
-	background: #5C5B81;
+	background: #A7BB03;
 	height:96px;
 }
 #copyrights {
