--- a/css/custom.css
+++ b/css/custom.css
@@ -11,10 +11,13 @@
 	font-weight:300;
 }
 
-
+html {
+	
+}
 
 body {
 	font-family: Roboto Condensed;
+	font-size: 16px;
 	font-weight:300;
 	color:#333;
 }
