--- a/css/custom.css
+++ b/css/custom.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-	font-family: Roboto Condensed;
+	font-family: "Roboto Condensed";
 	font-size: 16px;
 	font-weight:300;
 	color:#333;
@@ -49,7 +49,7 @@ h3,
 h4,
 h5,
 h6  {
-	font-family: Roboto Condensed;
+	font-family: "Roboto Condensed";
 	font-weight:300;
 }
 #section-visit {
@@ -163,11 +163,11 @@ a.text-white:hover {
 }
 
 .gentium-book {
-	font-family: Gentium Book Basic;
+	font-family: "Gentium Book Basic";
 	font-weight:400;
 }
 .roboto-condensed {
-	font-family: Roboto Condensed;
+	font-family: "Roboto Condensed";
 }
 .retina-logo, .standard-logo {
 	width:90%;
@@ -256,7 +256,7 @@ q:after {
 
 .section-8-purple {
 	color:#00B5FF;
-	font-family:Roboto Condensed;
+	font-family: "Roboto Condensed";
 	font-weight:400;
 }
 #r-symbol {
@@ -547,7 +547,7 @@ max-height: 0px;
 }
 #primary-menu > ul > li > a > div, #primary-menu ul li > a {
 	font-weight:300;
-	font-family: Roboto Condensed;
+	font-family: "Roboto Condensed";
 	letter-spacing:0px;
 	font-size:16px;
 	padding-bottom:11px;
@@ -1258,7 +1258,7 @@ section {
 
 }
 .text-shadow {
-	font-family: RobotoCondensed-Regular;
+	font-family: "RobotoCondensed-Regular";
 	font-size: 55px;
 	color: #FFFFFF;
 	letter-spacing: -0.89px;
