--- a/css/custom.css
+++ b/css/custom.css
@@ -949,11 +949,6 @@ section {
 	text-align: center;
 }
 
-.team-image img:hover {
-	border: 2px solid #00B5FF;
-	opacity: 0.7;
-}
-
 .team-image i {
 	display: none;
 	opacity: 1;
@@ -967,6 +962,18 @@ section {
 	left: 45%;
 	color: white;
 	opacity: 1;
+}
+.plus-icon-wrapper {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+.plus-icon-wrapper:hover {
+	border: 2px solid #00B5FF;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .slick-slide img {
