change navbar colors

--- a/css/custom.css
+++ b/css/custom.css
@@ -155,7 +155,7 @@ h5 {
 	color:#1344E1;
 }
 .text-white {
-	color:#FFF;
+	color:#FFF !important;
 }
 a.text-white:hover {
 	color: #FFF;
@@ -1095,6 +1095,43 @@ section {
 	padding-bottom:0px;
 }
 
+.text-shadow {
+	font-family: "RobotoCondensed-Regular";
+	font-size: 55px;
+	color: #FFFFFF;
+	letter-spacing: -0.89px;
+	text-shadow: 2px 2px 5px rgba(0,0,0,0.92);
+}
+.modal-header-close {
+	padding-bottom:10px;
+
+}
+
+#mail-form > button {
+	background:#C2D31E;
+	border:none;
+}
+button.close {
+	color: #d9534f !important;
+}
+.a-text-white {
+	color:#FFF !important;
+}
+.a-text-white:hover {
+	text-decoration:underline !important;
+}
+
+#primary-menu > ul > li:nth-child(1):hover > a {
+	color:#FF7A00 !important;
+}
+#primary-menu > ul > li:nth-child(2):hover > a {
+	color:#1ABC9C !important;
+}
+#primary-menu > ul > li:nth-child(3):hover > a {
+	color:#A7BB03 !important;
+}
+
+
 @media only screen and (max-width:1200px) {
 
 	div > div.price-box-content > h4 {
@@ -1127,6 +1164,13 @@ section {
 	.section-1-column {
 		text-align:center;
 	}
+	#primary-menu > ul > li > a {
+		color:#000 !important;
+	}
+	#primary-menu > ul > li:nth-child(1):hover > a {
+		color:#FF7A00 !important;
+	}
+
 	.box-text {
 		font-size:16px;
 	}
@@ -1274,41 +1318,6 @@ section {
 		display:none;
 	}
 
-}
-.text-shadow {
-	font-family: "RobotoCondensed-Regular";
-	font-size: 55px;
-	color: #FFFFFF;
-	letter-spacing: -0.89px;
-	text-shadow: 2px 2px 5px rgba(0,0,0,0.92);
-}
-.modal-header-close {
-	padding-bottom:10px;
-
-}
-
-#mail-form > button {
-	background:#C2D31E;
-	border:none;
-}
-button.close {
-	color: #d9534f !important;
-}
-.a-text-white {
-	color:#FFF !important;
-}
-.a-text-white:hover {
-	text-decoration:underline !important;
-}
-
-#primary-menu > ul > li:nth-child(1):hover > a {
-	color:#FF7A00;
-}
-#primary-menu > ul > li:nth-child(2):hover > a {
-	color:#1ABC9C;
-}
-#primary-menu > ul > li:nth-child(3):hover > a {
-	color:#A7BB03;
 }
 
 @media only screen and (max-width:768px) {
